08-kubernetes-root-calculator/my-cluster/redis-deployment.yml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: redis-deployment
  labels:
    app: my-redis
    type: cache

spec:
  template:
    metadata:
      name: my-redis-pod
      labels:
        app: my-redis
        type: cache
    spec:
      containers:
        - name: my-redis-container
          image: redis
  replicas: 2
  selector:
    matchLabels:
      type: cache
