08-kubernetes-root-calculator/my-cluster/backend-clusterip.yml
apiVersion: v1
kind: Service

metadata:
  name: backend-service
spec:
  type: ClusterIP
  ports:
    - targetPort: 4000
      port: 4000
  selector:
    type: backend
