08-kubernetes-root-calculator/my-cluster/ingress-service.yml
apiVersion: extensions/v1beta1
kind: Ingress
 
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
 
spec:
  rules:
    - http:
        paths:
          - path: /api/?(.*)
            backend:
              serviceName: backend-service
              servicePort: 4000
          - path: /?(.*)
            backend:
              serviceName: frontend-service
              servicePort: 80
